@@ -263,6 +263,11 @@ class NewRenderTestController < ActionController::Base
     render :action => "content_for", :layout => "yield"
   end
 
+  def render_content_type_from_body
+    response.content_type = Mime::RSS
+    render :text => "hello world!"
+  end
+
   def rescue_action(e) raise end
     
   private
@@ -572,14 +577,14 @@ EOS
   def test_update_page
     get :update_page
     assert_template nil
-    assert_equal 'text/javascript; charset=UTF-8', @response.headers['Content-Type']
+    assert_equal 'text/javascript; charset=utf-8', @response.headers['Content-Type']
     assert_equal 2, @response.body.split($/).length
   end
   
   def test_update_page_with_instance_variables
     get :update_page_with_instance_variables
     assert_template nil
-    assert_equal 'text/javascript; charset=UTF-8', @response.headers['Content-Type']
+    assert_equal 'text/javascript; charset=utf-8', @response.headers['Content-Type']
     assert_match /balance/, @response.body
     assert_match /\$37/, @response.body
   end
