@@ -1,5 +1,16 @@
 *SVN*
 
+* Added utf-8 as the default charset for all renders. You can change this default using ActionController::Base.default_charset=(encoding) [DHH]
+
+* Added proper getters and setters for content type and charset [DHH]. Example of what we used to do:
+
+    response.headers["Content-Type"] = "application/atom+xml; charset=utf-8"
+  
+  ...now:
+  
+    response.content_type = Mime::ATOM
+    response.charset      = "utf-8"
+
 * Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]
 
   - XPATH support
